app/assets/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Inter';
  src: url('../fonts/Inter-VariableFont.ttf') format('truetype');
  font-weight: 100 900;
  font-style: normal;
}
@media screen and (-webkit-min-device-pixel-ratio: 0) {
  select {
    font-family: Inter, Arial, Helvetica, sans-serif;
  }
}

html {
  font-size: 16px;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

html[theme='dark'],
html[theme='highcontrast'] {
  /* make the scrollbars dark theme when in the dark modes */
  color-scheme: dark;
}

body {
  background: var(--bg-body-color);
  font-family: 'Inter';
  color: var(--text-body-color) !important;
}

.bg-widget-color {
  background: var(--bg-widget-color);
}

html,
body,
#page-wrapper {
  height: 100%;
  width: 100%;
  overflow-y: initial;
}

#content-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  width: 100%;
  overflow-y: initial;
}

.page-content {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  overflow-y: initial;
}

#view {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  position: relative;
}

#view > .ng-isolate-scope {
  display: flex;
  flex-direction: column;
}
/* some angular views have multiple child elements, so only apply the flex styles to the only child */
/* ensure that the parent page containers (from the router) stretch to fit available space */
#view > :only-child.ng-isolate-scope {
  flex: 1 0 auto;
}

.logo {
  display: inline;
  max-width: 155px;
  max-height: 55px;
}

.white-space-normal {
  white-space: normal !important;
}

.legend .title {
  padding: 0 0.3em;
  margin: 0.5em;
  border-style: solid;
  border-width: 0 0 0 1em;
}
.messages {
  max-height: 50px;
  overflow-x: hidden;
  overflow-y: scroll;
}
.containerNameInput {
  width: 85%;
  border: none;
  background: none;
  border-bottom: 1px solid black;
}

.containerNameInput:active,
.containerNameInput:focus {
  outline: none;
}

#network-legend {
  text-align: center;
}

#network-legend span {
  display: inline;
  font-size: 18px;
}

.form-section-title {
  @apply text-gray-9;
  @apply th-dark:text-white;
  @apply th-highcontrast:text-white;

  margin-top: 20px;
  margin-bottom: 10px;
  padding-left: 0;
  font-weight: 500;
  font-size: 16px;
}

.form-section-title:first-child {
  margin-top: 5px;
}

.form-horizontal .control-label.text-left,
.form-row .control-label.text-left {
  text-align: left;
  font-size: 0.9em;
}

input[type='checkbox'] {
  margin-top: 1px;
  vertical-align: middle;
}

.md-checkbox input[type='checkbox'] {
  width: 16px;
  height: 16px;
  margin-top: -1px;
}

.md-checkbox input[type='checkbox']:indeterminate + label:before {
  content: '-';
  align-content: center;
  line-height: 16px;
  text-align: center;
}

.space-right {
  margin-right: 5px;
}

.space-left {
  margin-left: 5px;
}

.portainer-disabled-link {
  color: gray;
  pointer-events: none;
}

.portainer-disabled-datatable {
  color: gray;
}

.portainer-disabled-datatable a {
  color: gray;
  pointer-events: none;
}

.datatable-highlighted {
  background-color: var(--bg-item-highlighted-color);
}

.datatable-unhighlighted {
  background-color: var(--bg-item-highlighted-null-color);
}

.text-warning {
  @apply text-warning-9 th-highcontrast:text-warning-1 th-dark:text-warning-7;
}

.widget .widget-body table tbody .image-tag {
  font-size: 90% !important;
  margin-right: 5px;
}

.widget .widget-body table tbody .label-margins {
  margin-left: 5px;
  margin-right: 0;
}

.widget .widget-body table tbody .fit-text-size {
  font-size: 90% !important;
}

.widget .widget-body table thead th {
  font-weight: normal;
}

.widget .widget-body .nowrap-cells tbody td {
  white-space: nowrap;
}

.widget .widget-body table tbody td {
  white-space: normal;
  word-break: break-word;
}

.widget .widget-body table.container-details-table > tbody > tr > td:first-child {
  word-break: normal;
  text-transform: uppercase;
}

.widget .widget-body table.description-table {
  table-layout: fixed;
}

.template-widget {
  height: 100%;
}

.template-widget-body {
  max-height: 86%;
  overflow-y: auto;
}

.blocklist {
  display: flex;
  flex-direction: column;
  padding: 10px;
}

.blocklist-item {
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid var(--border-blocklist);
  border-radius: 8px;
  margin-right: 10px;
}

.blocklist-item--selected {
  background-color: var(--bg-blocklist-item-selected-color);
  border-color: var(--border-blocklist-item-selected-color);
  color: var(--text-blocklist-item-selected-color);
}

.blocklist-item:not(.blocklist-item-not-interactive):hover {
  @apply border border-blue-7;
  cursor: pointer;

  background-color: var(--bg-blocklist-hover-color);
  color: var(--text-blocklist-hover-color);
}

.blocklist-item-box {
  display: flex;
}

.blocklist-item-line {
  display: flex;
  justify-content: space-between;
}

.blocklist-item-logo {
  width: 100%;
  max-width: 60px;
  max-height: 60px;
}

.blocklist-item-title {
  font-size: 1.8em;
  font-weight: bold;
}

.blocklist-item-subtitle {
  font-size: 0.9em;
  padding-right: 1em;
}

.blocklist-item-desc {
  font-size: 0.9em;
  padding-right: 1em;
}

.template-note {
  padding: 0.5em;
  font-size: 0.9em;
}

.nopadding {
  padding: 0 !important;
}

.padding-top {
  padding-top: 15px !important;
}

.nomargin {
  margin: 0 !important;
}

.interactive {
  cursor: pointer;
}

.custom-header-ico {
  max-width: 32px;
  max-height: 32px;
}

.btn-responsive {
  padding: 5px 10px;
  font-size: 12px;
  line-height: 1.5;
  border-radius: 3px;
}

.btn-datatable {
  padding: 2.6px 7.8px 3.9px;
  line-height: 1;
  margin: 0px 0px 0px 0px;
}

@media screen and (min-width: 1107px) {
  .btn-responsive {
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    border-radius: 4px;
  }
}

.page-wrapper {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
}

.simple-box {
  margin-bottom: 80px;
}
/* ... */

